testcases/malgo/error/ErrorRigidType.mlg
module ErrorRigidType = {
  apply :: (a -> b) -> b -> a;
  apply = { f x -> f x };
}